Add metagenome workflow

--- a/workflow/notebooks/generate_config_dict.ipynb
+++ b/workflow/notebooks/generate_config_dict.ipynb
@@ -54,7 +54,7 @@
    ],
    "source": [
     "from data_io import is_fwd_id, get_fwd_id, get_sibling_id\n",
-    "from dim_reduction import SpectralEmbedding, scBiMapEmbedding\n",
+    "from dim_reduction import SpectralEmbedding, scBiMapEmbedding,GaussianRandomProjection,SparseRandomProjection,SimHash_Dimredu\n",
     "from nearest_neighbors import (\n",
     "    ExactNearestNeighbors,\n",
     "    NNDescent,\n",
@@ -66,6 +66,10 @@
     "    _NearestNeighbors,\n",
     "    IVFProductQuantization,\n",
     "    SimHash,\n",
+    "    BlockSimHash,\n",
+    "    NewSimHash,\n",
+    "    NewSimHash2,\n",
+    "    NewSimHash3\n",
     ")\n",
     "from graph import OverlapGraph, GenomicInterval, get_overlap_statistics, remove_false_edges\n",
     "from truth import get_overlaps\n",
@@ -2650,8 +2654,285 @@
     "config_dict[\"SimHash_Cosine_None_TF-IDF\"]=NearestNeighborsConfig(\n",
     "            nearest_neighbors_method=SimHash,\n",
     "            description='SimHash,Cosine,None,TF-IDF',\n",
-    "            tfidf='TF-IDF') "
+    "            tfidf='TF-IDF') \n",
+    "config_dict[\"NewSimHash_Cosine_None_None\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=NewSimHash,\n",
+    "            description='NewSimHash,Cosine,None,None',\n",
+    "            tfidf='None')\n",
+    "config_dict[\"NewSimHash_Cosine_None_TF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=NewSimHash,\n",
+    "            description='NewSimHash,Cosine,None,TF',\n",
+    "            tfidf='TF') \n",
+    "config_dict[\"NewSimHash_Cosine_None_IDF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=NewSimHash,\n",
+    "            description='NewSimHash,Cosine,None,IDF',\n",
+    "            tfidf='IDF') \n",
+    "config_dict[\"NewSimHash_Cosine_None_TF-IDF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=NewSimHash,\n",
+    "            description='NewSimHash,Cosine,None,TF-IDF',\n",
+    "            tfidf='TF-IDF') \n",
+    "\n",
+    "config_dict[\"BlockSimHash_Cosine_None_None\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=BlockSimHash,\n",
+    "            description='BlockSimHash,Cosine,None,None',\n",
+    "            tfidf='None')\n",
+    "config_dict[\"BlockSimHash_Cosine_None_TF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=BlockSimHash,\n",
+    "            description='BlockSimHash,Cosine,None,TF',\n",
+    "            tfidf='TF') \n",
+    "config_dict[\"BlockSimHash_Cosine_None_IDF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=BlockSimHash,\n",
+    "            description='BlockSimHash,Cosine,None,IDF',\n",
+    "            tfidf='IDF') \n",
+    "config_dict[\"BlockSimHash_Cosine_None_TF-IDF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=BlockSimHash,\n",
+    "            description='BlockSimHash,Cosine,None,TF-IDF',\n",
+    "            tfidf='TF-IDF') \n",
+    "\n",
+    "#-----HNSW and random projection\n",
+    "config_dict[\"HNSW_Euclidean_GaussianRP_3200d_None\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=HNSW,\n",
+    "            description='HNSW,Euclidean,GaussianRP,3200,None',\n",
+    "            tfidf='None',\n",
+    "            dimension_reduction_method=GaussianRandomProjection,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='euclidean')) \n",
+    "config_dict[\"HNSW_Euclidean_GaussianRP_3200d_TF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=HNSW,\n",
+    "            description='HNSW,Euclidean,GaussianRP,3200,TF',\n",
+    "            tfidf='TF',\n",
+    "            dimension_reduction_method=GaussianRandomProjection,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='euclidean')) \n",
+    "config_dict[\"HNSW_Euclidean_GaussianRP_3200d_IDF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=HNSW,\n",
+    "            description='HNSW,Euclidean,GaussianRP,3200,IDF',\n",
+    "            tfidf='IDF',\n",
+    "            dimension_reduction_method=GaussianRandomProjection,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='euclidean')) \n",
+    "config_dict[\"HNSW_Euclidean_GaussianRP_3200d_TF-IDF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=HNSW,\n",
+    "            description='HNSW,Euclidean,GaussianRP,3200,TF-IDF',\n",
+    "            tfidf='TF-IDF',\n",
+    "            dimension_reduction_method=GaussianRandomProjection,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='euclidean')) \n",
+    "\n",
+    "config_dict[\"HNSW_Euclidean_SparseRP_3200d_None\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=HNSW,\n",
+    "            description='HNSW,Euclidean,SparseRP,3200,None',\n",
+    "            tfidf='None',\n",
+    "            dimension_reduction_method=SparseRandomProjection,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='euclidean')) \n",
+    "config_dict[\"HNSW_Euclidean_SparseRP_3200d_TF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=HNSW,\n",
+    "            description='HNSW,Euclidean,SparseRP,3200,TF',\n",
+    "            tfidf='TF',\n",
+    "            dimension_reduction_method=SparseRandomProjection,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='euclidean')) \n",
+    "config_dict[\"HNSW_Euclidean_SparseRP_3200d_IDF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=HNSW,\n",
+    "            description='HNSW,Euclidean,SparseRP,3200,IDF',\n",
+    "            tfidf='IDF',\n",
+    "            dimension_reduction_method=SparseRandomProjection,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='euclidean')) \n",
+    "config_dict[\"HNSW_Euclidean_SparseRP_3200d_TF-IDF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=HNSW,\n",
+    "            description='HNSW,Euclidean,SparseRP,3200,TF-IDF',\n",
+    "            tfidf='TF-IDF',\n",
+    "            dimension_reduction_method=SparseRandomProjection,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='euclidean')) \n",
+    "\n",
+    "#-----exact and random projection\n",
+    "\n",
+    "config_dict[\"Exact_Euclidean_GaussianRP_3200d_None\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=ExactNearestNeighbors,\n",
+    "            description='Exact,Euclidean,GaussianRP,3200,None',\n",
+    "            tfidf='None',\n",
+    "            dimension_reduction_method=GaussianRandomProjection,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='euclidean')) \n",
+    "config_dict[\"Exact_Euclidean_GaussianRP_3200d_TF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=ExactNearestNeighbors,\n",
+    "            description='Exact,Euclidean,GaussianRP,3200,TF',\n",
+    "            tfidf='TF',\n",
+    "            dimension_reduction_method=GaussianRandomProjection,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='euclidean')) \n",
+    "config_dict[\"Exact_Euclidean_GaussianRP_3200d_IDF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=ExactNearestNeighbors,\n",
+    "            description='Exact,Euclidean,GaussianRP,3200,IDF',\n",
+    "            tfidf='IDF',\n",
+    "            dimension_reduction_method=GaussianRandomProjection,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='euclidean')) \n",
+    "config_dict[\"Exact_Euclidean_GaussianRP_3200d_TF-IDF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=ExactNearestNeighbors,\n",
+    "            description='Exact,Euclidean,GaussianRP,3200,TF-IDF',\n",
+    "            tfidf='TF-IDF',\n",
+    "            dimension_reduction_method=GaussianRandomProjection,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='euclidean')) \n",
+    "\n",
+    "config_dict[\"Exact_Euclidean_SparseRP_3200d_None\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=ExactNearestNeighbors,\n",
+    "            description='Exact,Euclidean,SparseRP,3200,None',\n",
+    "            tfidf='None',\n",
+    "            dimension_reduction_method=SparseRandomProjection,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='euclidean')) \n",
+    "config_dict[\"Exact_Euclidean_SparseRP_3200d_TF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=ExactNearestNeighbors,\n",
+    "            description='Exact,Euclidean,SparseRP,3200,TF',\n",
+    "            tfidf='TF',\n",
+    "            dimension_reduction_method=SparseRandomProjection,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='euclidean')) \n",
+    "config_dict[\"Exact_Euclidean_SparseRP_3200d_IDF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=ExactNearestNeighbors,\n",
+    "            description='Exact,Euclidean,SparseRP,3200,IDF',\n",
+    "            tfidf='IDF',\n",
+    "            dimension_reduction_method=SparseRandomProjection,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='euclidean')) \n",
+    "config_dict[\"Exact_Euclidean_SparseRP_3200d_TF-IDF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=ExactNearestNeighbors,\n",
+    "            description='Exact,Euclidean,SparseRP,3200,TF-IDF',\n",
+    "            tfidf='TF-IDF',\n",
+    "            dimension_reduction_method=SparseRandomProjection,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='euclidean')) \n",
+    "\n",
+    "\n",
+    "config_dict[\"Exact_Euclidean_SimHash_3200d_None\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=ExactNearestNeighbors,\n",
+    "            description='Exact,Euclidean,SimHash_Dimredu,3200,None',\n",
+    "            tfidf='None',\n",
+    "            dimension_reduction_method=SimHash_Dimredu,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='euclidean')) \n",
+    "config_dict[\"Exact_Euclidean_SimHash_3200d_TF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=ExactNearestNeighbors,\n",
+    "            description='Exact,Euclidean,SimHash_Dimredu,3200,TF',\n",
+    "            tfidf='TF',\n",
+    "            dimension_reduction_method=SimHash_Dimredu,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='euclidean')) \n",
+    "config_dict[\"Exact_Euclidean_SimHash_3200d_IDF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=ExactNearestNeighbors,\n",
+    "            description='Exact,Euclidean,SimHash_Dimredu,3200,IDF',\n",
+    "            tfidf='IDF',\n",
+    "            dimension_reduction_method=SimHash_Dimredu,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='euclidean')) \n",
+    "config_dict[\"Exact_Euclidean_SimHash_3200d_TF-IDF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=ExactNearestNeighbors,\n",
+    "            description='Exact,Euclidean,SimHash_Dimredu,3200,TF-IDF',\n",
+    "            tfidf='TF-IDF',\n",
+    "            dimension_reduction_method=SimHash_Dimredu,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='euclidean')) \n",
+    "\n",
+    "config_dict[\"HNSW_Euclidean_SimHash_3200d_None\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=HNSW,\n",
+    "            description='HNSW,Euclidean,SimHash_Dimredu,3200,None',\n",
+    "            tfidf='None',\n",
+    "            dimension_reduction_method=SimHash_Dimredu,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='euclidean')) \n",
+    "config_dict[\"HNSW_Euclidean_SimHash_3200d_TF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=HNSW,\n",
+    "            description='HNSW,Euclidean,SimHash_Dimredu,3200,TF',\n",
+    "            tfidf='TF',\n",
+    "            dimension_reduction_method=SimHash_Dimredu,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='euclidean')) \n",
+    "config_dict[\"HNSW_Euclidean_SimHash_3200d_IDF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=HNSW,\n",
+    "            description='HNSW,Euclidean,SimHash_Dimredu,3200,IDF',\n",
+    "            tfidf='IDF',\n",
+    "            dimension_reduction_method=SimHash_Dimredu,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='euclidean')) \n",
+    "config_dict[\"HNSW_Euclidean_SimHash_3200d_TF-IDF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=HNSW,\n",
+    "            description='HNSW,Euclidean,SimHash_Dimredu,3200,TF-IDF',\n",
+    "            tfidf='TF-IDF',\n",
+    "            dimension_reduction_method=SimHash_Dimredu,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='euclidean')) \n",
+    "\n",
+    "config_dict[\"Exact_Cosine_SimHash_3200d_None\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=ExactNearestNeighbors,\n",
+    "            description='Exact,Cosine,SimHash_Dimredu,3200,None',\n",
+    "            tfidf='None',\n",
+    "            dimension_reduction_method=SimHash_Dimredu,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='cosine')) \n",
+    "config_dict[\"Exact_Cosine_SimHash_3200d_TF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=ExactNearestNeighbors,\n",
+    "            description='Exact,Cosine,SimHash_Dimredu,3200,TF',\n",
+    "            tfidf='TF',\n",
+    "            dimension_reduction_method=SimHash_Dimredu,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='cosine')) \n",
+    "config_dict[\"Exact_Cosine_SimHash_3200d_IDF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=ExactNearestNeighbors,\n",
+    "            description='Exact,Cosine,SimHash_Dimredu,3200,IDF',\n",
+    "            tfidf='IDF',\n",
+    "            dimension_reduction_method=SimHash_Dimredu,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='cosine')) \n",
+    "config_dict[\"Exact_Cosine_SimHash_3200d_TF-IDF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=ExactNearestNeighbors,\n",
+    "            description='Exact,Cosine,SimHash_Dimredu,3200,TF-IDF',\n",
+    "            tfidf='TF-IDF',\n",
+    "            dimension_reduction_method=SimHash_Dimredu,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='cosine')) \n",
+    "\n",
+    "config_dict[\"HNSW_Cosine_SimHash_3200d_None\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=HNSW,\n",
+    "            description='HNSW,Cosine,SimHash_Dimredu,3200,None',\n",
+    "            tfidf='None',\n",
+    "            dimension_reduction_method=SimHash_Dimredu,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='cosine')) \n",
+    "config_dict[\"HNSW_Cosine_SimHash_3200d_TF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=HNSW,\n",
+    "            description='HNSW,Cosine,SimHash_Dimredu,3200,TF',\n",
+    "            tfidf='TF',\n",
+    "            dimension_reduction_method=SimHash_Dimredu,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='cosine')) \n",
+    "config_dict[\"HNSW_Cosine_SimHash_3200d_IDF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=HNSW,\n",
+    "            description='HNSW,Cosine,SimHash_Dimredu,3200,IDF',\n",
+    "            tfidf='IDF',\n",
+    "            dimension_reduction_method=SimHash_Dimredu,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='cosine')) \n",
+    "config_dict[\"HNSW_Cosine_SimHash_3200d_TF-IDF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=HNSW,\n",
+    "            description='HNSW,Cosine,SimHash_Dimredu,3200,TF-IDF',\n",
+    "            tfidf='TF-IDF',\n",
+    "            dimension_reduction_method=SimHash_Dimredu,\n",
+    "            dimension_reduction_kw=dict(n_dimensions=3200),\n",
+    "            nearest_neighbors_kw=dict(metric='cosine')) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a969909c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2667,23 +2948,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "b7607a99",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "NearestNeighborsConfig(description='SimHash,Cosine,None,TF', tfidf='TF', dimension_reduction_method=None, nearest_neighbors_method=<class 'nearest_neighbors.SimHash'>)"
+       "NearestNeighborsConfig(description='BlockSimHash,Cosine,None,TF-IDF', tfidf='TF-IDF', dimension_reduction_method=None, nearest_neighbors_method=<class 'nearest_neighbors.BlockSimHash'>)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "config_dict[\"SimHash_Cosine_None_TF\"]"
+    "config_dict[\"BlockSimHash_Cosine_None_TF-IDF\"]"
    ]
   },
   {
@@ -2856,7 +3137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
