--- a/notebooks/dim_reduction/dim_reduction.py.ipynb
+++ b/notebooks/dim_reduction/dim_reduction.py.ipynb
@@ -822,7 +822,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "3172702e82c9c1d9450fdd20452651b9_",
    "language": "python",
    "name": "python3"
   },
@@ -836,7 +836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
