--- a/notebooks/simhash/real_IGK simhash-64bit.ipynb
+++ b/notebooks/simhash/real_IGK simhash-64bit.ipynb
@@ -1481,7 +1481,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "3172702e82c9c1d9450fdd20452651b9_",
    "language": "python",
    "name": "python3"
   },
